# fate

./: .gitignore  README.md  WORKPLAN.md  fate.sh  pyproject.toml
docs/: .gitignore  Gemfile  _config.yml  index.md  requirements.md  usecases.md
docs/_data/: topnav.yml
docs/_data/sidebars/: fate_sidebar.yml
docs/_includes/architecture/components/: configuration_manager  main
docs/_includes/architecture/dependencies/: pytest
docs/implementation/bash/: test-ipdb.py
docs/implementation/bash/fate/: docker.sh  logging.sh  orchestration.sh
docs/implementation/bash_reference/: fate.sh
docs/implementation/bash_reference/fate/: analyzer.sh  discovery.sh  environment.sh  error.sh  main.sh  state.sh
docs/implementation/python/: pyproject.toml
docs/implementation/python/pyfate/: discovery.py  environment.py  executable.py  execution.py  launch.py  main.py
docs/pages/fate/: architecture.md  overview.md  use_cases.md
docs/pages/project/: overview.md
docs/requirements/: cli.puml  ui.md
environments/python3/: Dockerfile
fate/: analyzer.sh  argument_parser.sh  discovery.sh  docker.sh  environment.sh  logging.sh  main.sh  orchestration.sh
fate-tool/: __init__.py  test_command.py  test_executor.py
pyfate/: case.py  case_manager.py  cliold.py  discovery.py  executable.py  execution.py  launch.py
pyfate/cli/: app.py
pyfate/cli/commands/: configure.py  discover.py  run.py
pyfate/config/: configuration.py
pyfate/config/defaults/: environments.py
pyfate/test/: test_case_manager_helper.py
test/: .fate.json  solution.py
(+10 files in other folders)
