[tool.poetry]
name = "fate-tool"
version = "0.1.0"
description = "Framework for Algorithm TEsting tests your solutions against a set of input and output files. Developed with HackerRank in mind."
authors = ["vduseev <vagiz.d@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.4"
cleo = "^0.7.2"
pytest = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
